--- a/Assets/UI Toolkit/MainMenu.uxml
+++ b/Assets/UI Toolkit/MainMenu.uxml
@@ -21,7 +21,7 @@
             <ui:Button text="Confirm" display-tooltip-when-elided="true" name="Confirm" class="BackNext" style="left: auto; right: 5%; width: 30%; visibility: hidden;" />
             <ui:Button text="Back" display-tooltip-when-elided="true" name="LoadBack" class="BackNext" style="visibility: hidden;" />
             <ui:Button text="Confirm" display-tooltip-when-elided="true" name="LoadConfirm" class="BackNext" style="left: auto; right: 5%; width: 30%; visibility: hidden;" />
-            <ui:RadioButtonGroup value="-1" name="Locations" style="position: absolute; top: 20%; left: 5%; height: 55%; width: 40%; flex-direction: column; align-items: flex-start; justify-content: space-around; font-size: 60px; -unity-text-align: middle-left; visibility: hidden;" />
+            <ui:RadioButtonGroup value="-1" name="Locations" class="RadioButtons" />
             <ui:RadioButtonGroup value="-1" name="Ferocities" style="position: absolute; top: 20%; left: auto; height: 55%; width: 35%; flex-direction: column; align-items: flex-end; justify-content: space-around; font-size: 60px; -unity-text-align: middle-left; visibility: hidden; right: 10%;" />
         </ui:Label>
         <ui:Button text="Quit" display-tooltip-when-elided="true" name="Quit" class="BackNext ButtonQuit" />
