--- a/Assets/UI Toolkit/MainStyles.uss
+++ b/Assets/UI Toolkit/MainStyles.uss
@@ -202,3 +202,17 @@
     border-top-color: rgb(151, 64, 27);
     border-bottom-color: rgb(151, 64, 27);
 }
+
+.RadioButtons {
+    position: absolute;
+    top: 20%;
+    left: 5%;
+    height: 55%;
+    width: 40%;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-around;
+    font-size: 60px;
+    -unity-text-align: middle-left;
+    visibility: hidden;
+}
