--- a/Assets/UI Toolkit/MainMenu.uxml
+++ b/Assets/UI Toolkit/MainMenu.uxml
@@ -1,8 +1,7 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/UI%20Toolkit/MainStyles.uss?fileID=7433441132597879392&amp;guid=5c28875138ec85a48a15204caaad60cc&amp;type=3#MainStyles" />
-    <ui:VisualElement name="Root" picking-mode="Ignore" style="flex-grow: 1; align-items: center;">
-        <ui:Label text="Choose a Scenario" display-tooltip-when-elided="true" name="Headline" picking-mode="Ignore" class="Headline" style="top: 3%; flex-wrap: wrap;" />
-        <ui:VisualElement name="HideTitle" picking-mode="Ignore" style="position: absolute; left: 40px; top: 1400px; right: 40px; bottom: 230px; background-color: rgb(55, 29, 12); visibility: hidden;" />
+    <ui:VisualElement name="Root" picking-mode="Ignore" style="flex-grow: 1; align-items: center; flex-wrap: wrap; justify-content: center;">
+        <ui:Label text="Choose  a  Scenario" display-tooltip-when-elided="true" name="Headline" picking-mode="Ignore" class="Headline" style="top: 3%; flex-wrap: wrap;" />
         <ui:VisualElement name="ButtonPanel" picking-mode="Ignore" style="align-items: center; justify-content: center; visibility: hidden; width: 100%; height: 55%; position: absolute; top: 12%; transition-timing-function: ease-in-out-bounce;">
             <ui:Button text="Rise of the People" display-tooltip-when-elided="true" name="Rise" class="ButtonMenu" />
             <ui:Button text="Los Dueños Del Mundo" display-tooltip-when-elided="true" name="Mundo" class="ButtonMenu" />
@@ -11,19 +10,21 @@
             <ui:Button text="The Rope Thrower" display-tooltip-when-elided="true" name="Rope" class="ButtonMenu" />
             <ui:Button text="The Navajo Wars" display-tooltip-when-elided="true" name="Navajo" class="ButtonMenu" />
         </ui:VisualElement>
+        <ui:VisualElement name="HideTitle" picking-mode="Ignore" style="position: absolute; left: 40px; top: 1400px; right: 40px; bottom: 230px; background-color: rgb(55, 29, 12); visibility: hidden;" />
+        <ui:ScrollView name="ScrollView" picking-mode="Ignore" style="visibility: hidden; position: absolute; bottom: 20%; align-items: auto; flex-wrap: wrap; width: 95%; height: 55%; background-color: rgb(199, 171, 159); border-top-left-radius: 24px; border-bottom-left-radius: 24px; border-top-right-radius: 24px; border-bottom-right-radius: 24px;">
+            <ui:Label name="viewSetup" picking-mode="Ignore" text="Select the Family&apos;s Location and Ferocity" style="-unity-font: resource(&apos;Fonts/EBGaramond-Medium&apos;); -unity-font-definition: resource(&apos;Fonts/EBGaramond-Medium SDF&apos;); background-color: rgba(199, 171, 159, 0.73); -unity-text-align: upper-left; font-size: 96px; border-top-left-radius: 24px; border-bottom-left-radius: 24px; border-top-right-radius: 24px; border-bottom-right-radius: 24px; white-space: normal; color: rgb(0, 0, 0); visibility: hidden; flex-shrink: 0; flex-grow: 0; flex-wrap: nowrap; margin-left: 16px; margin-right: 16px; margin-top: 16px; margin-bottom: 16px; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0;" />
+        </ui:ScrollView>
+        <ui:RadioButtonGroup value="-1" name="Locations" class="RadioButtons" style="height: 728px; top: 792px;" />
+        <ui:RadioButtonGroup value="-1" name="Ferocities" style="position: absolute; top: 792px; left: auto; height: 732px; width: 35%; flex-direction: column; align-items: flex-end; justify-content: space-around; font-size: 60px; -unity-text-align: middle-left; visibility: hidden; right: 10%;" />
         <ui:VisualElement name="LoadPanel" picking-mode="Ignore" style="width: 100%; height: 55%; position: absolute; top: 12%; align-items: center; justify-content: center; visibility: hidden;">
             <ui:Button text="Load Saved Game" display-tooltip-when-elided="true" name="LoadSave" class="ButtonMenu" />
             <ui:Button text="Start New Game" display-tooltip-when-elided="true" name="NewGame" class="ButtonMenu" />
         </ui:VisualElement>
-        <ui:Label text="Select the Family&apos;s&#10;Location and Ferocity" display-tooltip-when-elided="true" name="viewSetup" picking-mode="Ignore" style="justify-content: flex-start; align-items: flex-start; flex-wrap: wrap; width: 95%; height: 75%; bottom: 0; position: absolute; -unity-font: resource(&apos;Fonts/EBGaramond-Medium&apos;); -unity-font-definition: resource(&apos;Fonts/EBGaramond-Medium SDF&apos;); background-color: rgba(199, 171, 159, 0.73); -unity-text-align: upper-left; font-size: 72px; border-top-left-radius: 24px; border-bottom-left-radius: 24px; border-top-right-radius: 24px; border-bottom-right-radius: 24px; padding-left: 12px; padding-right: 12px; padding-top: 12px; padding-bottom: 12px; margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0; visibility: hidden; white-space: normal; color: rgb(0, 0, 0);">
-            <ui:Button text="Back" display-tooltip-when-elided="true" name="Back" class="BackNext" style="visibility: hidden;" />
-            <ui:Button text="Next" display-tooltip-when-elided="true" name="Next" class="BackNext" style="left: auto; right: 5%; visibility: hidden;" />
-            <ui:Button text="Confirm" display-tooltip-when-elided="true" name="Confirm" class="BackNext" style="left: auto; right: 5%; width: 30%; visibility: hidden;" />
-            <ui:Button text="Back" display-tooltip-when-elided="true" name="LoadBack" class="BackNext" style="visibility: hidden;" />
-            <ui:Button text="Confirm" display-tooltip-when-elided="true" name="LoadConfirm" class="BackNext" style="left: auto; right: 5%; width: 30%; visibility: hidden;" />
-            <ui:RadioButtonGroup value="-1" name="Locations" class="RadioButtons" />
-            <ui:RadioButtonGroup value="-1" name="Ferocities" style="position: absolute; top: 20%; left: auto; height: 55%; width: 35%; flex-direction: column; align-items: flex-end; justify-content: space-around; font-size: 60px; -unity-text-align: middle-left; visibility: hidden; right: 10%;" />
-        </ui:Label>
+        <ui:Button text="Back" display-tooltip-when-elided="true" name="Back" class="BackNext" style="visibility: hidden;" />
+        <ui:Button text="Next" display-tooltip-when-elided="true" name="Next" class="BackNext" style="left: auto; right: 5%; visibility: hidden;" />
+        <ui:Button text="Confirm" display-tooltip-when-elided="true" name="Confirm" class="BackNext" style="left: auto; right: 5%; width: 30%; visibility: hidden;" />
+        <ui:Button text="Back" display-tooltip-when-elided="true" name="LoadBack" class="BackNext" style="visibility: hidden;" />
+        <ui:Button text="Confirm" display-tooltip-when-elided="true" name="LoadConfirm" class="BackNext" style="left: auto; right: 5%; width: 30%; visibility: hidden;" />
         <ui:Button text="Quit" display-tooltip-when-elided="true" name="Quit" class="BackNext ButtonQuit" />
     </ui:VisualElement>
 </ui:UXML>
