--- a/Assets/UI Toolkit/Operations.uxml
+++ b/Assets/UI Toolkit/Operations.uxml
@@ -7,13 +7,13 @@
             <ui:Label text="Operations" display-tooltip-when-elided="true" name="Headline" picking-mode="Ignore" class="Headline" style="width: 95%; height: auto; white-space: normal; flex-grow: 0; position: relative; top: auto; align-items: auto; margin-top: 4px;" />
         </ui:VisualElement>
         <ui:VisualElement name="Body" style="flex-grow: 1; width: 100%; align-items: center; overflow: hidden; max-height: 80%; flex-shrink: 1; flex-basis: auto;">
-            <ui:VisualElement name="BodyTop" style="overflow: hidden; flex-grow: 1; padding-left: 4%; padding-right: 2%; padding-top: 0; padding-bottom: 0; width: 100%; flex-basis: auto;">
+            <ui:VisualElement name="BodyTop" style="overflow: hidden; flex-grow: 1; padding-left: 4%; padding-right: 2%; padding-top: 0; padding-bottom: 0; flex-basis: auto; width: 100%;">
                 <ui:ScrollView name="MessagePanel" picking-mode="Ignore" style="overflow: visible; flex-wrap: wrap; width: auto; align-items: stretch; justify-content: center; min-width: auto; min-height: auto; max-height: 100%;">
                     <ui:Label text="Message text here." display-tooltip-when-elided="false" name="Message" picking-mode="Ignore" style="justify-content: flex-start; align-items: stretch; flex-wrap: wrap; width: auto; height: auto; -unity-font: resource(&apos;Fonts/EBGaramond-Medium&apos;); -unity-font-definition: resource(&apos;Fonts/EBGaramond-Medium SDF&apos;); -unity-text-align: upper-left; font-size: 72px; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0; margin-left: 2%; margin-right: 2%; margin-top: 1%; margin-bottom: 1%; white-space: normal; color: rgb(0, 0, 0); overflow: hidden; flex-shrink: 1; max-height: none;" />
                 </ui:ScrollView>
             </ui:VisualElement>
-            <ui:VisualElement name="BodyBottom" style="flex-grow: 1; overflow: hidden; flex-basis: auto;">
-                <ui:ScrollView name="ChoicePanel" style="flex-grow: 0; width: 776px; align-items: auto; height: auto; max-height: none; min-height: auto; display: flex; overflow: hidden;">
+            <ui:VisualElement name="BodyBottom" style="flex-grow: 1; overflow: hidden; flex-basis: auto; width: 100%;">
+                <ui:ScrollView name="ChoicePanel" style="flex-grow: 0; width: 100%; align-items: auto; height: auto; display: flex; overflow: hidden;">
                     <ui:Foldout text="Child A" name="Person1" value="true" style="position: relative; -unity-font: resource(&apos;Fonts/Arvo-Regular&apos;); -unity-font-definition: resource(&apos;Fonts/Arvo-Regular SDF&apos;); font-size: 76px; background-image: none; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0; margin-left: 40px; margin-right: 40px; margin-top: 40px; margin-bottom: 40px; -unity-background-scale-mode: scale-to-fit; align-items: center; justify-content: flex-start; display: flex;">
                         <ui:Button text="Man" display-tooltip-when-elided="true" name="Action1" style="font-size: 32px; width: 100%; background-color: rgba(255, 255, 255, 0.31);" />
                         <ui:Button text="Woman" display-tooltip-when-elided="true" name="Action2" style="font-size: 32px; width: 100%; background-color: rgba(255, 255, 255, 0.31);" />
