--- a/Assets/UI Toolkit/MainStyles.uss
+++ b/Assets/UI Toolkit/MainStyles.uss
@@ -10,8 +10,8 @@
 }
 
 .ButtonMenu {
-    width: 60%;
-    height: 10%;
+    width: 680px;
+    height: 110px;
     -unity-font: resource('Fonts/EBGaramond-Medium');
     -unity-font-definition: resource('Fonts/EBGaramond-Medium SDF');
     background-color: rgba(55, 29, 12, 0.78);
@@ -33,11 +33,12 @@
     margin-right: 24px;
     margin-top: 24px;
     margin-bottom: 24px;
+    align-items: center;
 }
 
 .ButtonMenu:hover {
-    width: 75%;
-    height: 10%;
+    width: 750px;
+    height: 110px;
     -unity-font: resource('Fonts/EBGaramond-Medium');
     -unity-font-definition: resource('Fonts/EBGaramond-Medium SDF');
     background-color: rgba(55, 29, 12, 0.78);
@@ -62,8 +63,8 @@
 }
 
 .ButtonMenu:active {
-    width: 75%;
-    height: 10%;
+    width: 750px;
+    height: 110px;
     -unity-font: resource('Fonts/EBGaramond-Medium');
     -unity-font-definition: resource('Fonts/EBGaramond-Medium SDF');
     background-color: rgb(151, 64, 27);
