--- a/Assets/UI Toolkit/Operations.uxml
+++ b/Assets/UI Toolkit/Operations.uxml
@@ -12,38 +12,16 @@
                     <ui:Label text="Message text here." display-tooltip-when-elided="false" name="Message" picking-mode="Ignore" style="justify-content: flex-start; align-items: stretch; flex-wrap: wrap; width: auto; height: auto; -unity-font: resource(&apos;Fonts/EBGaramond-Medium&apos;); -unity-font-definition: resource(&apos;Fonts/EBGaramond-Medium SDF&apos;); -unity-text-align: upper-left; font-size: 72px; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0; margin-left: 2%; margin-right: 2%; margin-top: 1%; margin-bottom: 1%; white-space: normal; color: rgb(0, 0, 0); overflow: hidden; flex-shrink: 1; max-height: none;" />
                 </ui:ScrollView>
             </ui:VisualElement>
-            <ui:VisualElement name="BodyBottom" style="flex-grow: 1; overflow: hidden; flex-basis: auto; width: 100%;">
-                <ui:ScrollView name="ChoicePanel" style="flex-grow: 0; width: 100%; align-items: auto; height: auto; display: flex; overflow: hidden;">
-                    <ui:Foldout text="Child A" name="Person1" value="true" style="position: relative; -unity-font: resource(&apos;Fonts/Arvo-Regular&apos;); -unity-font-definition: resource(&apos;Fonts/Arvo-Regular SDF&apos;); font-size: 76px; background-image: none; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0; margin-left: 40px; margin-right: 40px; margin-top: 40px; margin-bottom: 40px; -unity-background-scale-mode: scale-to-fit; align-items: center; justify-content: flex-start; display: flex;">
-                        <ui:Button text="Man" display-tooltip-when-elided="true" name="Action1" style="font-size: 32px; width: 100%; background-color: rgba(255, 255, 255, 0.31);" />
-                        <ui:Button text="Woman" display-tooltip-when-elided="true" name="Action2" style="font-size: 32px; width: 100%; background-color: rgba(255, 255, 255, 0.31);" />
-                        <ui:Button text="Elder" display-tooltip-when-elided="true" name="Action3" style="font-size: 32px; width: 100%; background-color: rgba(255, 255, 255, 0.31);" />
-                    </ui:Foldout>
-                    <ui:Foldout text="Child A" name="Person2" value="true" style="position: relative; -unity-font: resource(&apos;Fonts/Arvo-Regular&apos;); -unity-font-definition: resource(&apos;Fonts/Arvo-Regular SDF&apos;); font-size: 76px; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0; margin-left: 40px; margin-right: 40px; margin-top: 40px; margin-bottom: 40px; align-items: center; justify-content: flex-start; display: none;">
-                        <ui:Button text="Man" display-tooltip-when-elided="true" name="Action1" style="font-size: 32px; width: 100%; background-color: rgba(255, 255, 255, 0.31);" />
-                        <ui:Button text="Woman" display-tooltip-when-elided="true" name="Action2" style="font-size: 32px; width: 100%; background-color: rgba(255, 255, 255, 0.31);" />
-                        <ui:Button text="Elder" display-tooltip-when-elided="true" name="Action3" style="font-size: 32px; width: 100%; background-color: rgba(255, 255, 255, 0.31);" />
-                    </ui:Foldout>
-                    <ui:Foldout text="Child A" name="Person3" value="true" style="position: relative; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0; margin-left: 40px; margin-right: 40px; margin-top: 40px; margin-bottom: 40px; align-items: center; justify-content: flex-start; display: none; font-size: 76px; -unity-font: resource(&apos;Fonts/Arvo-Regular&apos;); -unity-font-definition: resource(&apos;Fonts/Arvo-Regular SDF&apos;);">
-                        <ui:Button text="Man" display-tooltip-when-elided="true" name="Action1" style="font-size: 32px; width: 100%; background-color: rgba(255, 255, 255, 0.31);" />
-                        <ui:Button text="Woman" display-tooltip-when-elided="true" name="Action2" style="font-size: 32px; width: 100%; background-color: rgba(255, 255, 255, 0.31);" />
-                        <ui:Button text="Elder" display-tooltip-when-elided="true" name="Action3" style="font-size: 32px; width: 100%; background-color: rgba(255, 255, 255, 0.31);" />
-                    </ui:Foldout>
-                    <ui:Foldout text="Child A" name="Person4" value="true" style="position: relative; -unity-font: resource(&apos;Fonts/Arvo-Regular&apos;); -unity-font-definition: resource(&apos;Fonts/Arvo-Regular SDF&apos;); font-size: 76px; background-image: none; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0; margin-left: 40px; margin-right: 40px; margin-top: 40px; margin-bottom: 40px; -unity-background-scale-mode: scale-to-fit; align-items: center; justify-content: flex-start; display: none;">
-                        <ui:Button text="Man" display-tooltip-when-elided="true" name="Action1" style="font-size: 32px; width: 100%; background-color: rgba(255, 255, 255, 0.31);" />
-                        <ui:Button text="Woman" display-tooltip-when-elided="true" name="Action2" style="font-size: 32px; width: 100%; background-color: rgba(255, 255, 255, 0.31);" />
-                        <ui:Button text="Elder" display-tooltip-when-elided="true" name="Action3" style="font-size: 32px; width: 100%; background-color: rgba(255, 255, 255, 0.31);" />
-                    </ui:Foldout>
-                    <ui:Foldout text="Child A" name="Person5" value="true" style="position: relative; -unity-font: resource(&apos;Fonts/Arvo-Regular&apos;); -unity-font-definition: resource(&apos;Fonts/Arvo-Regular SDF&apos;); font-size: 76px; background-image: none; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0; margin-left: 40px; margin-right: 40px; margin-top: 40px; margin-bottom: 40px; -unity-background-scale-mode: scale-to-fit; align-items: center; justify-content: flex-start; display: none;">
-                        <ui:Button text="Man" display-tooltip-when-elided="true" name="Action1" style="font-size: 32px; width: 100%; background-color: rgba(255, 255, 255, 0.31);" />
-                        <ui:Button text="Woman" display-tooltip-when-elided="true" name="Action2" style="font-size: 32px; width: 100%; background-color: rgba(255, 255, 255, 0.31);" />
-                        <ui:Button text="Elder" display-tooltip-when-elided="true" name="Action3" style="font-size: 32px; width: 100%; background-color: rgba(255, 255, 255, 0.31);" />
-                    </ui:Foldout>
-                    <ui:Foldout text="Child A" name="Person6" value="true" style="position: relative; -unity-font: resource(&apos;Fonts/Arvo-Regular&apos;); -unity-font-definition: resource(&apos;Fonts/Arvo-Regular SDF&apos;); font-size: 76px; background-image: none; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0; margin-left: 40px; margin-right: 40px; margin-top: 40px; margin-bottom: 40px; -unity-background-scale-mode: scale-to-fit; align-items: center; justify-content: flex-start; display: none;">
-                        <ui:Button text="Man" display-tooltip-when-elided="true" name="Action1" style="font-size: 32px; width: 100%; background-color: rgba(255, 255, 255, 0.31);" />
-                        <ui:Button text="Woman" display-tooltip-when-elided="true" name="Action2" style="font-size: 32px; width: 100%; background-color: rgba(255, 255, 255, 0.31);" />
-                        <ui:Button text="Elder" display-tooltip-when-elided="true" name="Action3" style="font-size: 32px; width: 100%; background-color: rgba(255, 255, 255, 0.31);" />
-                    </ui:Foldout>
+            <ui:VisualElement name="BodyBottom" style="flex-grow: 1; overflow: hidden; flex-basis: auto; width: 100%; align-items: center;">
+                <ui:ScrollView name="ScrollView" style="flex-grow: 0; width: 100%; align-items: center; height: auto; display: flex; overflow: hidden; justify-content: center;">
+                    <ui:VisualElement name="ChoicePanel" picking-mode="Ignore" style="align-items: center; width: 100%;">
+                        <ui:RadioButtonGroup value="-1" name="Locations" class="RadioButtons" style="height: 728px; top: auto; left: auto; position: relative; display: none;" />
+                        <ui:Foldout text="Child A" name="Person1" value="true" style="position: relative; -unity-font: resource(&apos;Fonts/Arvo-Regular&apos;); -unity-font-definition: resource(&apos;Fonts/Arvo-Regular SDF&apos;); font-size: 76px; background-image: none; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0; margin-left: 40px; margin-right: 40px; margin-top: 40px; margin-bottom: 40px; -unity-background-scale-mode: scale-to-fit; align-items: center; justify-content: flex-start; display: flex; width: 50%;">
+                            <ui:Button text="Man" display-tooltip-when-elided="true" name="Action1" style="font-size: 32px; width: 100%; background-color: rgba(255, 255, 255, 0.31);" />
+                            <ui:Button text="Woman" display-tooltip-when-elided="true" name="Action2" style="font-size: 32px; width: 100%; background-color: rgba(255, 255, 255, 0.31);" />
+                            <ui:Button text="Elder" display-tooltip-when-elided="true" name="Action3" style="font-size: 32px; width: 100%; background-color: rgba(255, 255, 255, 0.31);" />
+                        </ui:Foldout>
+                    </ui:VisualElement>
                 </ui:ScrollView>
             </ui:VisualElement>
         </ui:VisualElement>
