--- a/Assets/UI Toolkit/MainMenu.uxml
+++ b/Assets/UI Toolkit/MainMenu.uxml
@@ -3,7 +3,7 @@
     <ui:VisualElement name="Root" picking-mode="Ignore" style="flex-grow: 1; align-items: center; flex-wrap: wrap; justify-content: center;">
         <ui:Label text="Choose  a  Scenario" display-tooltip-when-elided="true" name="Headline" picking-mode="Ignore" class="Headline" style="top: 3%; flex-wrap: wrap;" />
         <ui:VisualElement name="ButtonPanel" picking-mode="Ignore" style="align-items: center; justify-content: center; visibility: hidden; width: 100%; height: 55%; position: absolute; top: 12%; transition-timing-function: ease-in-out-bounce;">
-            <ui:Button text="Rise of the People" display-tooltip-when-elided="true" name="Rise" class="ButtonMenu"  />
+            <ui:Button text="Rise of the People" display-tooltip-when-elided="true" name="Rise" class="ButtonMenu" />
             <ui:Button text="Los Dueños Del Mundo" display-tooltip-when-elided="true" name="Mundo" class="ButtonMenu" />
             <ui:Button text="A Broken Country" display-tooltip-when-elided="true" name="Broken" class="ButtonMenu" />
             <ui:Button text="The Fearing Time" display-tooltip-when-elided="true" name="Fearing" class="ButtonMenu" />
@@ -14,8 +14,8 @@
         <ui:ScrollView name="ScrollView" picking-mode="Ignore" style="visibility: hidden; position: absolute; bottom: 20%; align-items: auto; flex-wrap: wrap; width: 95%; height: 55%; background-color: rgb(199, 171, 159); border-top-left-radius: 24px; border-bottom-left-radius: 24px; border-top-right-radius: 24px; border-bottom-right-radius: 24px;">
             <ui:Label name="viewSetup" picking-mode="Ignore" text="Select the Family&apos;s Location and Ferocity" style="-unity-font: resource(&apos;Fonts/EBGaramond-Medium&apos;); -unity-font-definition: resource(&apos;Fonts/EBGaramond-Medium SDF&apos;); background-color: rgba(199, 171, 159, 0.73); -unity-text-align: upper-left; font-size: 96px; border-top-left-radius: 24px; border-bottom-left-radius: 24px; border-top-right-radius: 24px; border-bottom-right-radius: 24px; white-space: normal; color: rgb(0, 0, 0); visibility: hidden; flex-shrink: 0; flex-grow: 0; flex-wrap: nowrap; margin-left: 16px; margin-right: 16px; margin-top: 16px; margin-bottom: 16px; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0;" />
         </ui:ScrollView>
-        <ui:RadioButtonGroup value="-1" name="Locations" class="RadioButtons" style="height: 728px; top: 792px;" />
-        <ui:RadioButtonGroup value="-1" name="Ferocities" style="position: absolute; top: 792px; left: auto; height: 732px; width: 35%; flex-direction: column; align-items: flex-end; justify-content: space-around; font-size: 60px; -unity-text-align: middle-left; visibility: hidden; right: 10%;" />
+        <ui:RadioButtonGroup value="-1" name="Locations" class="RadioButtons" style="height: 728px; top: 792px; -unity-font-definition: resource(&apos;Fonts/EBGaramond-Medium SDF&apos;); -unity-font: resource(&apos;Fonts/EBGaramond-Medium&apos;);" />
+        <ui:RadioButtonGroup value="-1" name="Ferocities" style="position: absolute; top: 792px; left: auto; height: 732px; width: 35%; flex-direction: column; align-items: flex-end; justify-content: space-around; font-size: 60px; -unity-text-align: middle-left; visibility: hidden; right: 10%; -unity-font-definition: resource(&apos;Fonts/EBGaramond-Medium SDF&apos;); -unity-font: resource(&apos;Fonts/EBGaramond-Medium&apos;);" />
         <ui:VisualElement name="LoadPanel" picking-mode="Ignore" style="width: 100%; height: 55%; position: absolute; top: 12%; align-items: center; justify-content: center; visibility: hidden;">
             <ui:Button text="Load Saved Game" display-tooltip-when-elided="true" name="LoadSave" class="ButtonMenu" />
             <ui:Button text="Start New Game" display-tooltip-when-elided="true" name="NewGame" class="ButtonMenu" />
