--- a/Assets/UI Toolkit/MainStyles.uss
+++ b/Assets/UI Toolkit/MainStyles.uss
@@ -60,6 +60,8 @@
     margin-right: 24px;
     margin-top: 24px;
     margin-bottom: 24px;
+    transition-duration: 0.5s;
+    transition-timing-function: ease-in;
 }
 
 .ButtonMenu:active {
@@ -222,6 +224,8 @@
     -unity-font: resource('Fonts/Arvo-Regular');
     -unity-font-definition: resource('Fonts/Arvo-Regular SDF');
     font-size: 76px;
+    flex-wrap: wrap;
+    align-items: center;
 }
 
 .ButtonWoman {
@@ -275,4 +279,15 @@
     border-bottom-left-radius: 4px;
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
+}
+
+.Toggle {
+    -unity-font: resource('Fonts/Arvo-Regular');
+    -unity-font-definition: resource('Fonts/Arvo-Regular SDF');
+    font-size: 42px;
+    color: rgb(55, 29, 12);
+}
+
+.Toggle:hover {
+    background-color: rgb(199, 171, 159);
 }
