--- a/Assets/UI Toolkit/MainStyles.uss
+++ b/Assets/UI Toolkit/MainStyles.uss
@@ -60,8 +60,6 @@
     margin-right: 24px;
     margin-top: 24px;
     margin-bottom: 24px;
-    transition-duration: 0.5s;
-    transition-timing-function: ease-in;
 }
 
 .ButtonMenu:active {
@@ -251,6 +249,18 @@
     margin-bottom: 10px;
 }
 
+.ButtonChild {
+    font-size: 32px;
+    width: 200px;
+    background-color: rgba(255, 255, 255, 0.31);
+    background-image: resource('Textures/Counters/Counter Child');
+    height: 200px;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
 .ButtonMan:hover {
     border-left-color: rgb(151, 64, 27);
     border-right-color: rgb(151, 64, 27);
@@ -267,6 +277,21 @@
 }
 
 .ButtonWoman:hover {
+    border-left-color: rgb(151, 64, 27);
+    border-right-color: rgb(151, 64, 27);
+    border-top-color: rgb(151, 64, 27);
+    border-bottom-color: rgb(151, 64, 27);
+    border-left-width: 12px;
+    border-right-width: 12px;
+    border-top-width: 12px;
+    border-bottom-width: 12px;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+
+.ButtonChild:hover {
     border-left-color: rgb(151, 64, 27);
     border-right-color: rgb(151, 64, 27);
     border-top-color: rgb(151, 64, 27);
