--- a/Assets/UI Toolkit/CardDraw.uxml
+++ b/Assets/UI Toolkit/CardDraw.uxml
@@ -8,5 +8,6 @@
         <ui:Button text="Try &#10;Again" display-tooltip-when-elided="true" name="ReDraw" class="BackNext" style="left: 10%; bottom: 20%; width: 30%; right: auto; visibility: hidden;" />
         <ui:Button text="Confirm" display-tooltip-when-elided="true" name="Confirm" tooltip="Start Card Action" class="BackNext" style="left: auto; bottom: 20%; width: 30%; right: 10%; visibility: visible;" />
         <ui:Button text="Reopen&#10;Keypad" display-tooltip-when-elided="true" name="Reopen" tooltip="Start Card Action" class="BackNext" style="left: auto; bottom: 20%; width: 30%; right: auto; visibility: hidden;" />
+        <NavajoWars.ChoiceButton focusable="true" button-type="Three" name="TestButton" style="top: 50%; width: 25%;" />
     </ui:VisualElement>
 </ui:UXML>
