--- a/Assets/UI Toolkit/MainStyles.uss
+++ b/Assets/UI Toolkit/MainStyles.uss
@@ -316,3 +316,62 @@
 .Toggle:hover {
     background-color: rgb(199, 171, 159);
 }
+
+.TextDefault {
+    justify-content: flex-start;
+    align-items: stretch;
+    flex-wrap: wrap;
+    width: auto;
+    height: auto;
+    -unity-font: resource('Fonts/EBGaramond-Medium');
+    -unity-font-definition: resource('Fonts/EBGaramond-Medium SDF');
+    -unity-text-align: upper-left;
+    font-size: 72px;
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+    margin-left: 2%;
+    margin-right: 2%;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    white-space: normal;
+    color: rgb(0, 0, 0);
+    overflow: hidden;
+    flex-shrink: 1;
+    max-height: none;
+}
+
+.SliderPoints {
+    left: 10%;
+    width: 400px;
+    height: 100px;
+    font-size: 42px;
+    -unity-text-align: middle-left;
+    align-items: center;
+    white-space: normal;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-top: 8px;
+    padding-bottom: 8px;
+}
+
+.unity-base-slider__text-field {
+    width: 80px;
+    height: 80px;
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+}
+
+.unity-base-slider__dragger {
+    width: 24px;
+}
+
+.unity-base-slider__label {
+    white-space: normal;
+    max-width: 100px;
+}
